[FIX] composer: show FX icon in inactive mobile composer
Before this commit:
- The FX icon was not visible in the mobile composer when inactive.
- Composer appeared as an empty block if no cell text was present.

After this commit:
- Mobile composer now displays the FX icon when inactive.
- Maintains the composer’s visual structure even without cell text.

Task: 5092659
X-original-commit: 030841ec5ef350f99625124ac057868b43170e00

--- a/src/components/composer/top_bar_composer/top_bar_composer.css
+++ b/src/components/composer/top_bar_composer/top_bar_composer.css
@@ -19,14 +19,6 @@
       border-color: var(--os-selection-border-color);
       z-index: var(--os-components-importance-top-bar-composer);
     }
-
-    /* In readonly we always show the fx icon if the composer is empty, not matter the focus */
-    .o-composer:empty:not(:focus):not(.active)::before,
-    &.o-topbar-composer-readonly .o-composer:empty::before {
-      content: url("data:image/svg+xml,%3Csvg%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20viewBox%3D%270%200%20121.8%20122.9%27%20width%3D%2716%27%20height%3D%2716%27%20focusable%3D%27false%27%3E%3Cpath%20d%3D%27m28%2034-4%205v2h10l-6%2040c-4%2022-6%2028-7%2030-2%202-3%203-5%203-3%200-7-2-9-4H4c-2%202-4%204-4%207s4%206%208%206%209-2%2015-8c8-7%2013-17%2018-39l7-35%2013-1%203-6H49c4-23%207-27%2011-27%202%200%205%202%208%206h4c1-1%204-4%204-7%200-2-3-6-9-6-5%200-13%204-20%2010-6%207-9%2014-11%2024h-8zm41%2016c4-5%207-7%208-7s2%201%205%209l3%2012c-7%2011-12%2017-16%2017l-3-1-2-1c-3%200-6%203-6%207s3%207%207%207c6%200%2012-6%2022-23l3%2010c3%209%206%2013%2010%2013%205%200%2011-4%2018-15l-3-4c-4%206-7%208-8%208-2%200-4-3-6-10l-5-15%208-10%206-4%203%201%203%202c2%200%206-3%206-7s-2-7-6-7c-6%200-11%205-21%2020l-2-6c-3-9-5-14-9-14-5%200-12%206-18%2015l3%203z%27%20fill%3D%27%23BDBDBD%27/%3E%3C/svg%3E");
-      position: relative;
-      top: 20%;
-    }
   }
 
   .user-select-text {
